TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")
 * Fix depend onservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2010-06-02 MickeM
 * Fixed a few issues with listCounterInstances

2010-05-25 MickeM - 0.3.8 (take 3)
 ! Release the new version
 * Fixed issue with CheckServiceState

2010-05-25 MickeM - 0.3.8 (take 2)
 ! Release the new version
 * Fixed issue with FILEAGE

2010-05-19 MickeM - 0.3.8
 ! Release the new version

2010-05-17 MickeM
 * Fixed id is considerd an int (not a string) in the eventlog filter
 
2010-05-14 MickeM
 * Fixed issue with LUA script module not using relative path
 * New default syntax for CheckEventLog

2010-05-12 MickeM - 0.3.8 RC3
 * Fixed issue which caused latest build to crash

2010-05-10 MickeM - 0.3.8 RC2
 * Fixed issue with listpdh and debugpdh (not works again)
 + Fixed issue and added support for IN ( ... ) and NOT IN ( ... ) operators (CheckEventLog)

2010-05-08 MickeM
 + Added new "script templating" thing to simplify adding scripts:
   Two new sections: [Script Wrappings] for adding templates and [Wrapped Scripts] for adding the scripts.
    %SCRIPT% is replaced with the script name
    %ARGS% is replaced with arguments.
     vbs=cscript.exe //T:30 //NoLogo scripts\wrapper.vbs %SCRIPT% %ARGS%
    and
     w_vbs=check_test.vbs /arg1:1 /arg2:1 /variable:1
    is the same as:
     w_vbs=cscript.exe //T:30 //NoLogo scripts\wrapper.vbs check_test.vbs /arg1:1 /arg2:1 /variable:1
 * Added correct syntax for VB scripts
 * Added correct syntax for powershell scripts
 * Cleaned up scripts folder
 + Added new "NagiosPlugin library" from op5
 + Added check_no_rdp.vbs (Checks that no RDP connection is online)
 + Added check_battery.vbs which checks batterys via WMI
 + Added check_printer.vbs to check printers via WMI
