@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,8,78
-#define PRODUCTVER     0,3,8,78
-#define STRFILEVER     _T("0.3.8.78")
-#define STRPRODUCTVER  _T("0.3.8.78")
-#define STRPRODUCTDATE  _T("2010-06-02")
+#define FILEVER        0,3,8,89
+#define PRODUCTVER     0,3,8,89
+#define STRFILEVER     _T("0.3.8.89")
+#define STRPRODUCTVER  _T("0.3.8.89")
+#define STRPRODUCTDATE  _T("2010-07-28")
 #endif // AUTOBUILD_H
